<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <EditText
            android:id="@+id/dictionary_search"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dictionary_search_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"/>

        <TextView
            android:id="@+id/search_results"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_results_header"/>

        <Button
            android:id="@+id/clear_dictionary_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_label"/>

        <Button
            android:id="@+id/dictionary_acknowledgements_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dictionary_acknowledgements_label"/>

        <Button
            android:id="@+id/dictionary_return_to_menu_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/return_to_menu_label"/>

    </LinearLayout>
</ScrollView>