<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
  <Button
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:id="@+id/post_random_score_button"
      android:text="@string/post_random_score_text"/>
   <Button
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:id="@+id/view_high_scores_button"
       android:text="@string/view_high_scores_text"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view_players_button"
        android:text="@string/view_players_label"/>
</LinearLayout>