<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/game_over_view"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="New Game"
        android:id="@+id/new_bananagrams_button"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bananagrams_settings_label"
        android:id="@+id/bananagrams_menu_settings_button"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dictionary_acknowledgements_label"
        android:id="@+id/bananagrams_acknowledgements_button"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Quit"
        android:id="@+id/bananagrams_menu_quit"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiplayer_text"
        android:id="@+id/multiplayer_button"/>

</LinearLayout>