<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/score"
        android:text="@string/initial_score"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".08"/>

    <edu.neu.madcourse.zachcotter.bananagrams.Board
        android:id="@+id/board"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.77"/>

    <edu.neu.madcourse.zachcotter.bananagrams.LetterList
        android:id="@+id/letters_view"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15">

        <Button
            android:id="@+id/peel_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/peel_button_label"
            android:visibility="gone"/>
    </edu.neu.madcourse.zachcotter.bananagrams.LetterList>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:id="@+id/not_yo_turn"
        android:text="@string/not_yo_turn_text"
        android:visibility="gone"/>
</LinearLayout>